# fastapi-unleash-sfd2025

./: .gitignore  README.md  api.py  pyproject.toml
